<resources>
    <string name="app_name">Belot Asistent</string>

    <!-- ACTIVITY MAIN -->

    <string name="gameStart">POKRENI ZAPISNIK</string>
    <string name="settings">POSTAVKE</string>

    <!-- SETTINGS API -->
    <string name="settings_toolbar_name">Postavke</string>

    <!-- settings headers -->
    <string name="settings_header_general_settings">Općenite postavke</string>
    <string name="settings_header_general_dealer">Imena igrača</string>
    <string name="settings_header_general_remarks">Napomene</string>
    <string name="settings_header_general_about">O aplikaciji</string>

    <!-- general settings preferences -->
    <string name="settings_pref_round_points">Broj bodova u jednoj rundi</string>
    <!-- summary added from code -->

    <string-array name="settings_pref_round_points_entries">
        <item>1001</item>
        <item>701</item>
        <item>501</item>
    </string-array>

    <string name="settings_pref_count_rounds">Broji runde</string>
    <string name="settings_pref_count_rounds_summary">Prikaži broj runda tokom igre</string>

    <string name="settings_pref_name_team_us">Naziv lijeve ekipe</string>
    <!-- summary added from code -->
    <string name="settings_pref_name_team_us_default">Mi</string>

    <string name="settings_pref_name_team_you">Naziv desne ekipe</string>
    <!-- summary added from code -->
    <string name="settings_pref_name_team_you_default">Vi</string>

    <!-- remarks preferences -->
    <string name="settings_pref_last_hand">Zadnji štih</string>
    <string name="settings_pref_last_hand_summary">10 bodova od zadnjeg štiha su automatski pribrojeni.</string>

    <string name="settings_pref_delete_round">Brisanje zapisanih runda</string>
    <string name="settings_pref_delete_round_summary">Pritisnite i držite na rundu koju želite obrisati i odaberite briši unos.</string>

    <!-- about application preferences -->
    <string name="settings_pref_about_application">O aplikaciji</string>


    <!-- ACTIVITY SCOREBOARD -->

    <!-- activity strings -->

    <!-- TODO -->

    <!-- navigation drawer strings -->
    <string name="scoreboard_nav_current_score_title">Trenutni rezultat</string>
    <string name="scoreboard_nav_current_score">0:0</string>
    <string name="scoreboard_nav_current_card_dealer_title">TRENUTNO MIJEŠA KARTE</string>




    <!-- CONTENT DESCRIPTIONS -->
    <string name="desc_main_application_logo">Logo aplikacije</string>
    <string name="desc_scoreboard_nav_image_player_figure">Ikona igrača</string>
    <string name="desc_scoreboard_nav_image_table">Ikona stola</string>


</resources>
