<?xml version="1.0" encoding="utf-8"?>

<!-- widget displayed in navigation drawer in scoreboard activity, it shows the current score and who the current card dealer is -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/nav_drawer_current_score_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scoreboard_nav_current_score_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nav_drawer_current_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scoreboard_nav_current_score"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_current_score_title" />

    <TextView
        android:id="@+id/nav_drawer_current_card_dealer_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/scoreboard_nav_current_card_dealer_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_current_score" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/nav_drawer_container_players_and_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_drawer_current_card_dealer_title">

        <ImageView
            android:id="@+id/nav_drawer_player_figure_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/figure_grey" />

        <ImageView
            android:id="@+id/nav_drawer_player_figure_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/nav_drawer_player_table"
            app:layout_constraintTop_toTopOf="@+id/nav_drawer_player_table"
            app:srcCompat="@drawable/figure_grey" />

        <ImageView
            android:id="@+id/nav_drawer_player_figure_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/nav_drawer_player_table"
            app:layout_constraintTop_toTopOf="@+id/nav_drawer_player_table"
            android:src="@drawable/figure_grey" />

        <ImageView
            android:id="@+id/nav_drawer_player_table"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nav_drawer_player_figure_3"
            app:srcCompat="@drawable/rectangle_brown" />

        <ImageView
            android:id="@+id/nav_drawer_player_figure_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/nav_drawer_player_table"
            app:layout_constraintStart_toStartOf="@+id/nav_drawer_player_table"
            app:layout_constraintTop_toBottomOf="@+id/nav_drawer_player_table"
            app:srcCompat="@drawable/figure_grey" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>